ADD ui feedback and more

--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -186,7 +186,7 @@ Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge sch
 [#order-details]
 === Auftragsdetails
 
-Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<table-order-details-new-order, diese Tabelle>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
+Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<#table-order-details-new-order, diese Tabelle>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
 
 [[table-order-details-new-order]]
 .Neuer Auftrag: Auftragsdetails
@@ -580,7 +580,7 @@ Zudem kannst du einen oder mehrer *Gutscheincodes* eingeben, die mit diesem Auft
 Die Werte der Gutscheine werden mit dem Auftragswert verrechnet. Gutscheine werden nicht als Auftragspositionen im Warenkorb hinzugefügt. Gutscheine können nicht für Angebote eingelöst werden. Dies bedeutet, dass das Eingabefeld *Gutscheincodes* nur in der Auftragserstellung und nicht in der Angebotsrestellung verfügbar ist.
 
 Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir in dieser weitere Preise und die Umsatzsteuer ausgegeben. Steuersätze lassen sich anpassen, wenn du dies in den <<#carrying-out-standard-settings, Standardeinstellungen>> erlaubt hast. +
-Außerdem kannst du in dieser Tabelle die *Artikelbeschreibung* individuell anpassen. Die angepasste Artikelbeschreibung wird nur für diesen Auftrag übernommen. Das bedeutet, dass die angepasste Beschreibung für die Auftragsdaten und auch die Auftragsdokumente dieses Auftrags übernommen wird. Außerhalb dieses Auftrags bleibt die bereits im System hinterlegte Artikelbeschreibung bestehen. Es gibt eine Beschränkung von 1500 Zeichen für die *Artikelbeschreibung*.
+Außerdem kannst du in dieser Tabelle die *Artikelbeschreibung* individuell anpassen. Die angepasste Artikelbeschreibung wird nur für diesen Auftrag übernommen. Das bedeutet, dass die angepasste Beschreibung für die Auftragsdaten und auch die Auftragsdokumente dieses Auftrags übernommen wird. Außerhalb dieses Auftrags bleibt die bereits im System hinterlegte Artikelbeschreibung bestehen. Es gibt eine Beschränkung von 1.500 Zeichen für die *Artikelbeschreibung*.
 
 [.collapseBox]
 .*Tabelle individualisieren*
