--- a/docs/en-gb/modules/orders/pages/order-statuses.adoc
+++ b/docs/en-gb/modules/orders/pages/order-statuses.adoc
@@ -35,7 +35,7 @@ The following 28 status entries are available by default in your plentymarkets s
 | *[2]* Waiting for activation
 
 | *[3]* Waiting for payment
-|This status is automatically assigned to every unpaid order of the type Order.
+|This status is automatically assigned to every unpaid order of the type *Order*.
 
 | *[3.2]* In waiting position
 a|This status is automatically assigned in the following cases: +
@@ -45,18 +45,18 @@ a|This status is automatically assigned in the following cases: +
 * If an order is overpaid, not matter whether items are in stock or not.
 
 | *[3.3]* Ready for shipping; waiting for payment
-|This status is automatically assigned to an order of the type Order if a partial payment or a down payment for the order is booked and the items are in stock.
+|This status is automatically assigned to an order of the type *Order* if a partial payment or a down payment for the order is booked and the items are in stock.
 
 | *[3.4]* Dunning letter sent
 |We recommend this status to indicate that a dunning letter was sent. Set up an automatic process for this by using an event procedure or a process. However, the status is not set by an automatic process within the system.
 
 | *[4]* In preparation for shipping
 |Is connected to the stock limitation. If you are not keeping stock and do not use the stock limitation, the status is available to be reassigned. +
-When the stock limitation is used, the status is automatically assigned as soon as an order of the type Order is fully paid but the item is not in stock in sufficient number. The item limitation as to be set to net stock. +
+When the stock limitation is used, the status is automatically assigned as soon as an order of the type *Order* is fully paid but the item is not in stock in sufficient number. The item limitation as to be set to net stock. +
 If you use stock limitation and this status for insufficient stock, it is possible to have only those delivery notes and invoices generated which can be processed further.
 
 | *[5]* Cleared for shipping
-|This status is automatically assigned when an order of the type Order is paid or the payment method is invoice or cash in advance and the item is either in stock or stock is unlimited.
+|This status is automatically assigned when an order of the type *Order* is paid or the payment method is invoice or cash in advance and the item is either in stock or stock is unlimited.
 
 | *[5.1]* External processing
 |We recommend to use this status to indicate that the items are compiled and sent by a fulfilment provider. However, the status is not set by an automatic process within the system.
@@ -71,13 +71,13 @@ If you use stock limitation and this status for insufficient stock, it is possib
 |This status can be used as required. A possible use case is to assign this status after items are exported for analysing purposes.
 
 | *[8]* Cancelled
-|We recommend to use this status to indicate that a regular order was cancelled. Status 8 is the default status for cancelled orders. However, if required, you can adjust the default statuses in the *Setup » Orders » Settings* menu. This setting is called xref:orders:preparatory-settings.adoc#[intable-default-status-cancelled-orders[default status for cancelled orders]. If you assigned a different status to cancelled orders, you can reassign status 8 as required.
+|We recommend to use this status to indicate that an order of the type *Order* was cancelled. Status 8 is the default status for cancelled orders. However, if required, you can adjust the default statuses in the *Setup » Orders » Settings* menu. This setting is called xref:orders:preparatory-settings.adoc#[intable-default-status-cancelled-orders[default status for cancelled orders]. If you assigned a different status to cancelled orders, you can reassign status 8 as required.
 
 | *[8.1]* Cancelled by customer
 |We recommend to use this status to indicate that an order was cancelled by a customer.
 
 | *[9]* Return
-|This status is automatically preselected when an order of the type Return is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-return[default status for returns], if required. You can find this setting under *Setup » Orders » Settings*.
+|This status is automatically preselected when an order of the type *Return* is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-return[default status for returns], if required. You can find this setting under *Setup » Orders » Settings*.
 
 | *[9.1]* Items are checked
 |We recommend to use this status to indicate that returned items are checked.
@@ -98,26 +98,26 @@ If you use stock limitation and this status for insufficient stock, it is possib
 |This status can be used as required. This status can be used to identify a completed warranty. When creating a warranty, the corresponding order is switched either to status 4 or 5, depending on your workflow.
 
 | *[11]* Credit note
-|This status is automatically assigned to an order of the type Credit note order when a credit note is generated. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-credit-note[default status for credit notes], if required. You can find this setting under *Setup » Orders » Settings*.
+|This status is automatically assigned to an order of the type *Credit note* when a credit note is generated. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-credit-note[default status for credit notes], if required. You can find this setting under *Setup » Orders » Settings*.
 
 | *[11.1]* Credit note disbursed
 |We recommend to use this status to indicate that a credit note was disbursed and is completed.
 
 | *[12]* Repair
-|This status is automatically preselected when an order of the type Repair is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-repairs[default status for repairs], if required. You can find this setting under *Setup » Orders » Settings*.
+|This status is automatically preselected when an order of the type *Repair* is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-repairs[default status for repairs], if required. You can find this setting under *Setup » Orders » Settings*.
 
 | *[13]* Multi-order
-|This status is automatically assigned to an order of the type Multi-order when a multi-order is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-multi-order[default status for multi-orders], if required. You can find this setting under *Setup » Orders » Settings*.
+|This status is automatically assigned to an order of the type *Multi-order* when a multi-order is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-multi-order[default status for multi-orders], if required. You can find this setting under *Setup » Orders » Settings*.
 
 | *[14]* Multi credit note
-|This status is automatically assigned to an order of the type Multi credit note when a multi credit note is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-multi-credit-note[default status for multi credit notes], if required. You can find this setting under *Setup » Orders » Settings*.
+|This status is automatically assigned to an order of the type *Multi credit note* when a multi credit note is created. You can change the xref:orders:preparatory-settings.adoc#intable-default-status-multi-credit-note[default status for multi credit notes], if required. You can find this setting under *Setup » Orders » Settings*.
 |===
 
 [#add-and-edit-statuses]
 == Adding and editing a status
 
 In the *Setup » Orders » Status* menu, you can add your own statuses in addition to those listed in <<table-default-statuses>>. You can edit and e.g. rename the available status. Maintain statuses in different languages in order to inform your customers about the progress via email or in the customer account of the online shop. Apart from status related to system automatisms you are able to delete all status. Status related to system automatisms can be renamed. However you should make sure to not misuse the status related to system automatisms. +
-Additionally, you can decide how the order statuses are displayed in your plentymarkets system. Use the toggle *Show status ID in status name* to decide whether only the given status name or whether the status ID is displayed additionally.
+Additionally, you can decide how the order statuses are displayed in your plentymarkets system. Use the toggle button *Show status ID in status name* to decide whether only the given status name or whether the status ID is displayed additionally.
 
 [TIP]
 .Name is not a mandatory field
