--- a/docs/en-gb/modules/orders/pages/order-type-delivery-order.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-delivery-order.adoc
@@ -4,7 +4,7 @@
 :author: team-order-core
 
 The order type *Delivery order* allows you to create multiple delivery orders for the items included in the main order. This way, items from the main order can be shipped individually or in parts. Thus, delivery orders allow you to immediately ship items that are in stock and ship unavailable items later. Delivery orders can be shipped using one or several shipping service providers. +
-Delivery orders can be created <<#manually-create-delivery-orders, manually>>, <<#automatically-create-delivery-orders, automatically>> or via an <<#create-delivery-orders-via-event-procedure, event procedure>>.
+Delivery orders can be created <<#manually-create-delivery-orders, manually>> or automatically with an <<#create-delivery-orders-via-event-procedure, event procedure>>.
 
 [WARNING]
 .Transfer all order items to delivery orders
@@ -93,7 +93,7 @@ We recommend to generally create delivery orders for _all_ order items in the ma
 Generating delivery orders manually
 
 . Go to *Orders » Orders (Test phase)*.
-. Start the search (material:search[]) to display orders.
+. Carry out the search (material:search[]) to display orders.
 . Open the order for which delivery orders should be created.
 . At the top, click on *Create orders* (material:shopping_cart[]) > *Delivery order*.
 . Select the option *For specific items* to select items.
@@ -119,31 +119,31 @@ Generating delivery orders manually
 |Adds all open order items to the shopping cart.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
-| *Variation number*
-|Displays the variation number.
+| *Variation no.*
+|Shows the variation number.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Remaining quantity*
-|Displays the remaining quantity of the item.
+|Shows the remaining quantity of the item.
 
 | *Open quantity*
-|Displays the open quantity of the item.
+|Shows the open quantity of the item.
 
 | *Available stock*
-|Displays the available stock.
+|Shows the available stock.
 
 | *Item name*
-|Displays the name of the item.
+|Shows the name of the item.
 
 | *Add items to shopping cart* (material:add_shopping_cart[])
-|Only adds specific items to the return. This button is only displayed if at least 1 item is available. +
+|Only adds specific items to the delivery order. This button is only displayed if at least 1 item is available. +
 *_Tip:_* If needed, adjust the item quantity in the *Quantity* field.
 
 2+^| *Shopping cart*
@@ -152,16 +152,16 @@ Generating delivery orders manually
 |Removes all items from the shopping cart. If you only want to remove specific items, click on *Remove item from shopping cart* (material:delete[]) on the right of the respective item.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Item name*
-|Displays the item name. If needed, adjust the name.
+|Shows the item name. If needed, adjust the name.
 
 |===
 
@@ -180,11 +180,11 @@ When you automatically create delivery orders, the criteria for splitting up ord
 Automatically generating delivery orders:
 
 . Go to *Orders » Orders (Test phase)*.
-. Start the search (material:search[]) to display orders.
+. Carry out the search (material:search[]) to display orders.
 . Open the order or which delivery orders should be created.
 . At the top, click on *Create orders* (material:shopping_cart[]) > *Delivery order*.
 . Select the option *Split automatically*. +
-→ Based on the <<#basic-settings-delivery-order, basic settings>> that you carried out, the delivery orders are automatically splitted and created.
+→ Based on the <<#basic-settings-delivery-orders, basic settings>> that you carried out, the delivery orders are automatically split and created.
 
 [#create-delivery-orders-via-event-procedure]
 == Creating delivery orders via an event procedure
@@ -195,7 +195,7 @@ An ideal way to create delivery orders is using an event procedure. As a seller,
 
 Use the event procedure described in <<table-event-procedure-delivery-order-when-new-order>> if you want delivery orders to be generated as soon as a new order enters your plentymarkets system.
 
-Because this event procedure comes into effect directly upon reception of a new order, the status of the main order is not taken into consideration. Thus, delivery orders will also be created for main orders that are in status *3.0* (or *1.0* if you work with auction platforms such as eBay)  and will adopt the status of the main order.
+Because this event procedure comes into effect directly upon reception of a new order, the status of the main order is not taken into consideration. Thus, delivery orders will also be created for main orders that are in status *3.0* (or *1.0* if you work with auction platforms such as eBay). The delivery orders will adopt the status of the main order.
 
 :table-event-procedure: <<table-event-procedure-delivery-order-when-new-order>>
 include::_includes:partial$event-procedure.adoc[]
