--- a/docs/en-gb/modules/orders/pages/order-type-repair.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-repair.adoc
@@ -3,7 +3,7 @@
 :keywords: repair, repair status, repair condition
 :author: team-order-core
 
-In plentymarkets, repairs are represented by a separate order type. Repairs include items that have been returned and are in need of repair. Thus, repair orders can only be created from xref:orders:order-type-return.adoc#400[return orders].
+In plentymarkets, repairs are represented by a separate order type. Repairs include items that have been returned and are in need of repair. Thus, repair orders can only be created from xref:orders:order-type-return.adoc#[return orders].
 
 [#repair-statuses]
 == Creating statuses for repairs
@@ -50,7 +50,7 @@ Proceed as described below to create a repair:
 → The repair is created.
 
 [[table-settings-repair]]
-.Settings for creating a repair
+.Settings for registering a repair
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -70,49 +70,49 @@ Proceed as described below to create a repair:
 |Adds all open order items to the shopping cart.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID
+|Shows the variation ID.
 
-| *Variation number*
-|Displays the variation number.
+| *Variation no.*
+|Shows the variation number.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Remaining quantity*
-|Displays the remaining quantity of the item.
+|Shows the remaining quantity of the item.
 
 | *Open quantity*
-|Displays the open quantity of the item.
+|Shows the open quantity of the item.
 
 | *Item name*
-|Displays the name of the item.
+|Shows the name of the item.
 
 | *Add items to shopping cart* (material:add_shopping_cart[])
 |Only adds specific items to the repair. This button is only displayed if at least 1 item is available. +
-*_Tip:_* If needed, adjust the item quantity in the the *Quantity* field.
+*_Tip:_* If needed, adjust the item quantity in the *Quantity* field.
 
 2+^| *Shopping cart*
 
 | *Remove items from shopping cart* (material:delete[])
-|Removes all items from the shopping cart. If you only want to remove specific items, click on *Remove item from shopping cart* on the right of the respective item.
+|Removes all items from the shopping cart. If you only want to remove specific items, click on *Remove item from shopping cart* (material:delete[]) on the right of the respective item.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID
+|Shows the variation ID.
 
 | *Quantity*
-|Displays the item ID. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Item name*
-|Displays the item name. If needed, adjust the name.
+|Shows the item name. If needed, adjust the name.
 
 | *Item status*
-|Displays the item status. If needed, select another status from the drop-down list.
+|Shows the item status. If needed, select another status from the drop-down list.
 
 |===
 
