--- a/docs/en-gb/modules/orders/pages/order-type-return.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-return.adoc
@@ -9,12 +9,12 @@ Before you register returns, create xref:orders:order-type-return.adoc#enter-ret
 The default status for returns is status 9. This status is automatically assigned to every return that is registered. However, you can always determine another xref:orders:preparatory-settings.adoc#intable-default-status-return[default status for returns] in the *Setup » Orders » Settings* menu.
 
 [#enter-return-reasons]
-== Entering return reasons
+== Creating reasons for returns
 
-You can enter up to 20 return reasons. When registering a return, you select a reason for each order item. Return reasons allow you to see if an item has been returned exceptionally often for the same reason. You can save return reasons in multiple languages.
+You can create up to 20 return reasons. When registering a return, you select a reason for each order item. Return reasons allow you to see if an item has been returned exceptionally often for the same reason. You can save return reasons in multiple languages.
 
 [.instruction]
-Entering return reasons:
+Creating reasons for returns
 
 . Go to *Setup » Orders » Order types » Return*.
 . Select the *Language* from the drop-down list.
@@ -25,7 +25,7 @@ Entering return reasons:
 [#status-returned-items]
 == Entering statuses for returned items
 
-You can enter up to 12 item statuses. You can use these statuses to determine the condition of the returned items and also to track the processing of returned items. In a return, the statuses can be selected in the *Status and tags* area. Create the required statuses to assign them based on different steps of processing. You can save return statuses for multiple languages.
+You can enter up to 12 item statuses. You can use these statuses to determine the condition of the returned items and also to track the processing of returned items. In a return, the statuses can be selected in the *Status and tags* area. Create the required statuses to assign them based on different steps of processing. You can save return statuses in multiple languages.
 
 [.instruction]
 Entering statuses for returned items:
@@ -82,25 +82,25 @@ If you select a reason here, this reason takes priority over the reasons that ca
 |Adds all open order items to the shopping cart.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
-| *Variation number*
-|Displays the variation number.
+| *Variation no.*
+|Shows the variation number.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Remaining quantity*
-|Displays the remaining quantity of the item.
+|Shows the remaining quantity of the item.
 
 | *Open quantity*
-|Displays the open quantity of the item.
+|Shows the open quantity of the item.
 
 | *Item name*
-|Displays the name of the item.
+|Shows the name of the item.
 
 | *Add items to shopping cart* (material:add_shopping_cart[])
 |Only adds specific items to the return. This button is only displayed if at least 1 item is available. +
@@ -112,25 +112,25 @@ If you select a reason here, this reason takes priority over the reasons that ca
 |Removes all items from the shopping cart. If you only want to remove specific items, click on *Remove item from shopping cart* (material:delete[]) on the right of the respective item.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Item name*
-|Displays the item name. If needed, adjust the name.
+|Shows the item name. If needed, adjust the name.
 
 | *Return reason*
-|Displays the return reason. If needed, select another return reason from the drop-down list.
+|Shows the return reason. If needed, select another return reason from the drop-down list.
 
 | *Item status*
-|Displays the item status. If needed, select another status from the drop-down list.
+|Shows the item status. If needed, select another status from the drop-down list.
 
 | *Remaining item value [%]*
-|Displays the remaining item value in %. If needed, adjust the value.
+|Shows the remaining item value in %. If needed, adjust the value.
 
 |===
 
@@ -146,7 +146,7 @@ Before you can generate return slips, the document template xref:orders:generati
 [TIP]
 .Setting up return slips on the template
 ======
-It’s possible add a blank return slip to every order shipped to your customers. To do so, the return slip can be generated directly in the order. A return does not have to be created for this. Another way to do this is to allow customers in the online shop to register returns in the My account area, where they can also indicate return reasons. Afterwards, the filled-in return slip can be printed. No matter how you provide your customers with return slips: The column return reasons has to be positioned below the list of order items so that return reasons can be entered.
+It’s possible add a blank return slip to every order shipped to your customers. To do so, the return slip can be generated directly in the order. A return does not have to be created for this. Another way to do this is to allow customers in the online shop to register returns in the My account area, where they can also indicate return reasons. Afterwards, the filled-in return slip can be printed. No matter how you provide your customers with return slips: The column *return reasons* has to be positioned below the list of order items so that return reasons can be entered.
 ======
 
 Check the order items included in the return and change the options if needed, such as the item quantity, before generating a return slip.
@@ -157,33 +157,32 @@ Manually generating a return slip:
 . Go to *Orders » Orders (Test phase)*.
 . Carry out the search (material:search[]) to display orders.
 . On the right in the row of the return, click on the context menu (material:more_vert[]).
-. Select *Create document* ° *Return slip*.
+. Select *Create document* > *Return slip*. +
 icon:map-signs[] *_Or:_* Open the return for which you want to create a return slip.
-. In the *Documents* area, select the option *Create document* > *Create return slip*.
+. Go to the *Documents* area.
+. Click on *Create document* (material:add[]).
+. Select the option *Return slip*.
 . Carry out the settings for the return slip. Pay attention to the explanations given in <<table-generate-return-slip>>.
 . Then, click on *Create*.
 
 [[table-generate-return-slip]]
-.Carrying out settings for return slip
+.Settings for return slips
 [cols="1,3"]
 |===
 |Setting |Explanation
 
 | *Date*
-|Enter a date for the return slip or use the calendar (material:today[]) to select a date. The current date is preset.
+|Enter a delivery date or select a date via the calendar (material:today[]). This date will be displayed on the return slip. The current date is preset.
 
 | *Comment*
-|Enter an optional comment for the return slip.
-
-| *Change order status*
-|If needed, select another order status from the drop-down list.
+|Enter an optional comment that will be displayed on the return slip.
 
 |===
 
 [TIP]
 .Automatically creating a return slip
 ======
-Set up an event procedure to create a return slip automatically. If you select *New return (from customer)* and filter for the referrer Webshop, you can generate pre-filled return slips. Then, simply provide the return slips to your customers via download.
+Set up an event procedure to create a return slip automatically. If you select *New return (from customer)* and filter for the referrer *Webshop*, you can generate pre-filled return slips. Then, simply provide the return slips to your customers via download.
 ======
 
 [#book-back-items]
@@ -199,7 +198,7 @@ Booking back items:
 . Go to *Orders » Orders (Test phase)*.
 . Carry out the search (material:search[]) to display orders.
 . Open the return for which you want to book back items.
-. At the top, click on *Book back items* (material:input[]).
+. Click on the context menu (material:more_vert[]) at the top and select *Book back items* (material:input[]).
 . Select *Book back selected positions* to only book back specific positions or *Book back all positions* to book back all positions. Pay attention to the explanations given in <<table-book-back-items>>.
 . *Save* (material:save[]) the settings. +
 → The items are booked back.
@@ -221,19 +220,19 @@ The method for booking back stock is identical for returns that belong to orders
 |Adds all open order items to the shopping cart.
 
 | *Quantity*
-|Displays the item quantity.
+|Shows the item quantity.
 
 | *Open quantity*
-|Displays the open quantity of the item.
+|Shows the open quantity of the item.
 
 | *Remaining quantity*
-|Displays the remaining quantity of the item.
+|Shows the remaining quantity of the item.
 
 | *Batch*
-|Displays the batch number of the item.
+|Shows the batch number of the item.
 
 | *BBD*
-|Displays the best before date of the item.
+|Shows the best before date of the item.
 
 | *Item ID*
 |The item's ID
@@ -259,10 +258,10 @@ The method for booking back stock is identical for returns that belong to orders
 |ID of the variation
 
 | *BBD*
-|Displays the best before date of the item.
+|Shows the best before date of the item.
 
 | *Batch*
-|Displays the batch number of the item.
+|Shows the batch number of the item.
 
 | *Warehouse*
 |Select the warehouse into which the items should be booked back.
