--- a/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
@@ -10,7 +10,7 @@ Use the *Setup » Orders » Settings* menu to determine which settings should au
 [TIP]
 .Activating the toggle for the new order UI
 ======
-While the new order UI is still in its beta phase, you can decide for yourself if you already want to start using it for managing your orders. If you activate the toggle *Use new order UI (beta) and link to other menus* at the bottom of the *Setup » Orders » Order types » Sales order [Beta]* menu, the new UI will be automatically used and linked to other menus. This way, links from other areas in the system always lead to the new order UI. You have to carry out this setting manually. By default, the old order UI is preselected and linked to the other menus.
+While the new order UI is still in its beta phase, you can decide for yourself if you already want to start using it for managing your orders. If you activate the toggle button *Use new order UI (beta) and link to other menus* at the top of the *Setup » Orders » Order types » Sales order [Beta]* menu, the new UI will be automatically used and linked to other menus. Links from other areas of your plentymarkets system will always route to the new order UI. You have to carry out this setting manually. By default, the old order UI is preselected and linked to the other menus.
 ======
 
 [#conditions]
@@ -37,19 +37,6 @@ To authorise users of the type *back end* to open orders, you have to save defau
 Back end users have to be xref:business-decisions:user-accounts-access.adoc#105[authorised to edit orders].
 In addition, back end users also have to be authorised to create orders of the type *return*, *warranty* and *repair*. For this, back end users have to be authorised to edit the default statuses of these order types saved in the *Setup » Orders » Settings* menu. +
 Also, determine which users should be allowed to see which menus in the system. To do so, determine xref:business-decisions:user-accounts-access.adoc#100[visibilities], for example for warehouses and order statuses.
-
-[discrete]
-=== Assigning rights for prices to back end users
-
-:rights-purpose: see and edit prices
-:right-one: pass:quotes[*Items > Item > Variation > Price > Show*]
-:right-two: pass:quotes[*Items > Item > Variation > Price > Update*]
-:right-three: pass:quotes[*Item > Variation > Price > Show*]
-:right-four: pass:quotes[*Item > Variation > Price > Update*]
-:right-five: pass:quotes[*Orders > Order items > Contribution margin > Show*]
-
-include::_includes:partial$rights.adoc[]
-
 
 [#basic-settings]
 == Carrying out the basic settings
@@ -200,13 +187,13 @@ Note that you need at least version 5.0.40 of plentyShop LTS/IO to use this sett
 [#transfer-property]
 == Property transfer
 
-You can determine which order information (properties of an order) are transferred to another order. For example, properties are copied when you create delivery orders or returns. Properties are information that are part of an order, e.g. the shipping profile, the payment status or the document language. Properties can belong to an order or to an order item. +
-*_Note:_* The properties in this menu are not the variation properties you create yourself, such as the xref:item:properties.adoc#500[order properties].
+In the property copy, you can determine which order information (properties of an order) are transferred to another order. For example, properties are copied when you create delivery orders or returns. Properties are information that are part of an order, e.g. the shipping profile, the payment status or the document language. Properties can belong to an order or to an order item. +
+*_Note:_* This refers to xref:item:properties.adoc#500[properties] that you do not have created yourself, such as xref:item:personalised-items.adoc#95[order characteristics].
 
 [IMPORTANT]
 .Default for transferred properties
 ======
-All required properties are transferred by default from one order type into another order type. You don’t have to change any of the settings in this menu. Therefore, if you adapt these property settings, then only after careful consideration.
+All required properties are transferred by default from one order type into another order type. Therefore, only make changes to the copied properties after careful consideration.
 ======
 
 Use the menu *Setup » Orders » Property transfer* to determine which properties are to be copied. You determine this individually for different combinations, e.g. for the combination order (source) to delivery order (target). Note that not all of the properties are available for copying. The table column *Source* displays where a property comes from. *Internal* means that the property is a system property. *Interface* means that the property was created via a plugin or REST. +
