--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -11,7 +11,7 @@ Orders depict your sales and the business transactions connected to them. Those 
 == General information on creating orders in plentymarkets
 
 In plentymarkets, an order is automatically created when customers place orders in your online store or on one of your implemented markets. Separate orders with different order types are created for business transactions such as xref:orders:order-type-delivery-order.adoc#[delivery orders], xref:orders:order-type-return.adoc#[returns], xref:orders:order-type-credit-note.adoc#[credit notes], xref:orders:order-type-warranty.adoc#[warranties], and xref:orders:order-type-repair.adoc#[repairs]. These orders are always linked to the main orders. The order overview allows you to open and edit orders regardless of the xref:orders:order-referrer.adoc#[order referrer]. For many order types, such as xref:orders:order-type-delivery-order.adoc#[delivery orders], it makes sense to set up xref:automation:event-procedures.adoc#[event procedures] that allow you to automate part of your order processing. You will find some examples for using event procedures during order processing in the following chapters. +
-Orders that were not generated in the online store or on a market can be created xref:orders:manually-create-orders.adoc#[manually] in your system. This can be the required for orders via telephone, email or cash sales.
+Orders that were not generated in the online shop or on a market can be created xref:orders:manually-create-orders.adoc#[manually] in your system. This can be the required for orders via telephone, email or cash sales.
 
 Before processing the first orders in your plentymarkets system, adjust the xref:orders:preparatory-settings.adoc#[preparatory settings] in the *Setup » Orders » Settings* menu. Save those settings once even if you have not changed the default values.
 
@@ -20,43 +20,59 @@ Before processing the first orders in your plentymarkets system, adjust the xref
 
 Use the group function to edit multiple orders at once. The following group functions are available for orders.
 
-//icons hinzufügen
+[.instruction]
+Using group functions:
+
+. Go to *Orders » Orders (Test phase)*.
+. Carry out the search (material:search[]) to display orders.
+. Select (material:done[]) all orders for which you want to carry out a certain action at once.
+. Select one of the available group functions. Pay attention to the explanations given in <<table-order-group-functions>>.
 
 [[table-order-group-functions]]
 .Group functions for orders
-[cols="1,3"]
+[cols="2,1,6a"]
 |===
-|Setting |Explanation
+|Setting |Symbol |Explanation
 
 | *Group orders*
+|material:library_add_check[]
 |Groups the selected orders.
 
 | *Change status*
+|material:repeat_one[]
 |Changes the status of the selected orders. Select a status from the drop-down list.
 
 | *Change tag*
+|material:label[]
 |Changes the tag of the selected orders. It is possible to add or remove tags. Select the desired tags from the drop-down list.
 
 | *Book outgoing items*
+|material:book[]
 |Books the outgoing items for all selected orders. Select a date for the outgoing items.
 
 | *Delete orders*
+|material:delete[]
 |Deletes all selected orders.
 
 2+^| *Context menu* (material:more_vert[])
 | *Reverse outgoing items*
+|material:book[]
 |Reverses the outgoing items of all selected orders.
 
 | *Change owner*
+|material:people_alt[]
 |Changes the owner of all selected orders. Select the owner from the drop-down list.
 
 | *Change shipping profile*
+|material:local_shipping[]
 |Changes the shipping profile of all selected orders. Select a shipping profile from the drop-down list.
 
 | *Set order delivery date*
+|material:schedule_send[]
 |Sets a delivery date for all selected orders. Enter a delivery date or selected a date via the calendar (material:today[]).
 
 | *Set order item shipping date*
+|material:pending_actions[]
 |Sets a shipping date for the order item of all selected orders. Enter a shipping date or selected a date via the calendar (material:today[]).
 |===
 
@@ -95,7 +111,7 @@ All areas and their functions that are available for an order are described in t
 By clicking on an entry in the following list, you will be directly forwarded to the corresponding sub-chapter where you find further details.
 
 * <<#area-overview, Overview>>
-* <<#area-status-and-tags, Status and tags>>
+* <<#area-status-tags, Status and tags>>
 * <<#area-general, General>>
 * <<#area-addresses, Addresses>>
 * <<#area-order-items, Order items>>
@@ -120,16 +136,16 @@ The following areas will only be loaded and opened after you click on them in th
 .Back end users: Missing rights for certain areas, buttons and functions in the order?
 ====
 If a person with *Back end* access rights is not able to see certain areas and/or buttons and functions contained in the order, a person with *Admin* access rights needs to activate further rights in the user account. The user account can be found in the *Setup » Settings » User » Rights » User* menu. +
-All access rights that are necessary for each area, button and function in an order are described on the page xref:orders:preparatory-settings.adoc#[Carrying out the preparatory settings] in the chapter xref:orders:preparatory-settings.adoc#grant-rights[Assigning rights for back end users].
+All rights that are necessary for each area, button and function in an order are described on the page xref:orders:preparatory-settings.adoc#[Carrying out the preparatory settings] in the chapter xref:orders:preparatory-settings.adoc#grant-user-rights[Assigning rights for back end users].
 ====
 
 [#area-overview]
 === Area: Overview
 
-The *Overview* area provides all basic information about an order. <<table-tab-overview#>> lists all fields that are available in the *Overview* area of an order.
+The *Overview* area provides all basic information about an order. <<#table-tab-overview>> lists all fields that are available in the *Overview* area of an order.
 
 [[table-tab-overview]]
-.Settings in the Overview area
+.Settings in the *Overview* area
 [cols="1,3"]
 |===
 
@@ -186,7 +202,7 @@ The *Overview* area provides all basic information about an order. <<table-tab-o
 The *Status and tags* area provides information about the order status and the selected tags.
 
 [[table-area-status-tags]]
-.Settings in the Status and tags area
+.Settings in the *Status and tags* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -198,13 +214,7 @@ If needed, select another order status from the drop-down list. +
 
 | *Tags*
 a|Shows the selected tags. +
-The following tags are available in the drop-down list: +
-
-* Order tag
-* Delivery date: Set
-* Status: Delivered
-* Status: Open
-* Payment: Payed
+The drop-down list contains all tags that you have created.
 
 |===
 
@@ -214,7 +224,7 @@ The following tags are available in the drop-down list: +
 The *General* area provides basic information about your order. Use the editing mode to decide which settings should be displayed in this area.
 
 [[table-area-general]]
-.Settings in the General area
+.Settings in the *General* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -247,7 +257,7 @@ The default setting is *Germany*.
 
 | *Warehouse*
 |Shows the warehouse, or the main warehouse, of the order items. +
-*_Note:_* The option *Stock correction* synchronises the data in the settings of the order with the warehouse saved for the order items included in the order. The option is only available when you selected *b) a warehouse can be assigned for each stock unit* as a basic order setting for the *Assignment of warehouses* in the *Setup » Orders » Settings* menu. If you manually change the warehouse assigned to an order item and the changed warehouse is not automatically visible in the Settings tab of the order, click on *Stock correction* to update the display of the warehouse.
+*_Note:_* The option *Stock correction* synchronises the data in the settings of the order with the warehouse saved in the *Order items* area. The option is only available when you selected *b) a warehouse can be assigned for each stock unit* as a basic order setting for the *Assignment of warehouses* in the *Setup » Orders » Settings* menu. If you manually change the warehouse assigned to an order item and the changed warehouse is not automatically visible in the Settings tab of the order, click on *Stock correction* to update the display of the warehouse.
 
 | *Shipping profile and costs*
 |Shows the shipping profile and shipping costs for the order.
@@ -296,7 +306,7 @@ You can select from *None* and *Level 1* to *Level 4* from the drop-down list.
 | *Exchange rate*
 |Shows the exchange rate of the selected currency.
 
-| *Outgoing items*
+| *Outgoing items date*
 |Shows the date and the time of the outgoing items.
 
 | *Currency*
@@ -311,7 +321,7 @@ The *Addresses* area provides information about the invoice address and delivery
 You can adjust the settings in the context menu (material:more_vert[]).
 
 [[table-area-addresses]]
-.Settings in the Addresses area
+.Settings in the *Addresses* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -366,12 +376,12 @@ The following fields are available: +
 
 |===
 
-[#area-order-properties]
+[#area-order-items]
 === Area: Order items
 
 The *Order items* area provides detailed information about the order items.
 
-[[table-order-properties]]
+[[table-order-items]]
 .Area: Order items
 [cols="1,3"]
 |===
@@ -464,7 +474,7 @@ This is a default column.
 [discrete]
 ==== Editing items
 
-In the Order items area, you can edit the items of the orders. Note that this depends on the order type. To do so, click on the pencil (material:edit[]) on the left-hand side. The following table lists the available fields. Note that there are different fields available, depending on the order type.
+In the *Order items* area, you can edit the items of the orders. Note that this depends on the order type. To do so, click on the pencil (material:edit[]) on the left-hand side. The following table lists the available fields. Note that there are different fields available, depending on the order type.
 
 [[table-edit-items]]
 .Editing items
@@ -600,10 +610,10 @@ You can edit the data field gross price via material:edit[]. The net price will 
 |Updates the sales prices.
 
 | *Remove variations* (material:link_off[])
-|Deletes the variation of the order item.
+|Deletes the assigned variation from the order item.
 
 | *Edit properties* (material:edit[])
-|Edit the property. It is possible to edit the fields *Name*, *Value*, and *Surcharge* in the editing mode.
+|Edit the property. It is possible to edit the fields *Name*, *Value* and *Surcharge* in the editing mode.
 |===
 
 [#order-item-properties]
@@ -623,13 +633,13 @@ In the *Payment terms* area, information about *Payment due date*, *Early paymen
 If you want to use value date and early payment discount, you need to enter a payment due date. If there no entry is made or the value 0 is entered for the payment due date, the payment terms will not be transferred to documents.
 ======
 
-If the values were already saved in the xref:crm:managing-contacts.adoc#300[contact data], they will automatically be displayed here. Thus, contact data have priority. If nothing is saved in the contact data, it is checked whether the payment terms are defined in a xref:crm:managing-contacts.adoc#15[customer class]. If this is the case, these data are entered in the order. If the values do neither exist in the contact data nor in the customer class, the fields for the payment terms remain empty. +
+If the values were already saved in the xref:crm:edit-contact.adoc#contact-details[contact data], they will automatically be displayed here. Thus, contact data have priority. If nothing is saved in the contact data, it is checked whether the payment terms are defined in a xref:crm:preparatory-settings.adoc#create-customer-class[customer class]. If this is the case, these data are entered in the order. If the values do neither exist in the contact data nor in the customer class, the fields for the payment terms in the order remain empty. +
 In an order, the payment terms can be manually entered and edited. This is regardless of the fact where the values were taken from or whether no values were transferred. +
 Documents will show the values that are saved in the corresponding order. For this, also note the xref:orders:order-documents.adoc#intable-payment-terms-documents[document settings]. The payment terms are displayed on the order documents xref:orders:generating-invoices.adoc#[invoice], xref:orders:generating-pro-forma-invoice.adoc#[pro forma invoice], xref:orders:generating-order-confirmation.adoc#[order confirmation], and xref:orders:generating-offer.adoc#[offer]. +
 *_Note:_* The payment terms will only be displayed on documents if the corresponding order was paid with the payment method xref:payment:invoice.adoc#[Invoice] or the payment method xref:payment:cash-in-advance.adoc#[Cash in advance].
 
 [[table-payment-terms]]
-.Settings in the Payment terms area
+.Settings in the *Payment terms* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -645,12 +655,12 @@ Documents will show the values that are saved in the corresponding order. For th
 |===
 
 [#area-bank-data]
-=== Area: Bank data
+=== Area: Bank details
 
-The *Bank data* area gives you an overview of the bank details. Click on *New bank details* (material:add[]) to add data.
+The *Bank details* area gives you an overview of the bank details. Click on *New bank details* (material:add[]) to add data.
 
 [[table-bank-data]]
-.Settings in the Bank data area
+.Settings in the *Bank details* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -710,7 +720,7 @@ This field is only visible if the option *SEPA direct debit mandate* has been ac
 In the *Assigned payments* area, you can see all information about the payments that are assigned to an order. You can configure the columns (material:settings[]) as well as create new payments (material:add[]).
 
 [[table-assigned-payments]]
-.Settings in the Assigned payments area
+.Settings in the *Assigned payments* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -771,13 +781,13 @@ In the *Assigned payments* area, you can see all information about the payments 
 
 
 
-[#area-order-referrer]
+[#area-order-references]
 === Area: Order references
 
 The area *Order references* provides information that are related to the order. Via *Configure columns* (material:settings[]) you can adjust the columns as desired.
 
-[#area-order-referrer]
-.Settings in the Order references area
+[[table-order-references]]
+.Settings in the *Order references* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -813,13 +823,13 @@ The area *Order references* provides information that are related to the order. 
 |Displays the delivery address. If you select the option *As invoice*, the invoice address is entered automatically as the delivery address as well. Otherwise, the delivery address is taken from the contact data.
 |===
 
-[#area-order-properties]
+[#area-properties]
 === Area Properties
 
 In the *Properties* area, you can see the properties of the order items. Via *Configure columns* (material:settings[]) you can adjust the columns as desired.
 
-[[table-order-properties]]
-.Settings in the Properties area
+[[table-properties]]
+.Settings in the *Properties* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -846,7 +856,7 @@ In the *Properties* area, you can see the properties of the order items. Via *Co
 In the *Documents* area you can see all available and archived documents of your orders. You can configure the columns (material:settings[]), create new documents (material:add[]) and upload external documents (material:file_upload[]).
 
 [[table-documents]]
-.Settings in the Documents area
+.Settings in the *Documents* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -891,7 +901,7 @@ In the *Documents* area you can see all available and archived documents of your
 In the *History* area you get an overview of all previous actions as well as the respective status and date. You can configure the columns (material:settings[]) as desired.
 
 [[table-history]]
-.Settings in the History area
+.Settings in the *History* area
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -999,3 +1009,13 @@ Therefore, check if the following settings in the *Setup » Item » Sales prices
 * [ ] The corresponding *Referrer* of the order is activated.
 
 If you can place a check mark next to these options, you should be able to edit the order items. For further information, refer to the xref:item:prices.adoc#[Sales prices and price calculation] page. If you’re still looking for a specific information, you can also ask our supporters in the link:https://forum.plentymarkets.com/[Forum].
+
+[discrete]
+== Assigning rights for prices to back end users
+
+:rights-purpose: see and edit prices
+:right-one: pass:quotes[*Items > Item > Variation > Price > Show*]
+:right-two: pass:quotes[*Items > Item > Variation > Price > Update*]
+:right-three: pass:quotes[*Orders > Order items > Contribution margin > Show*]
+
+include::_includes:partial$rights.adoc[]
