--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -133,7 +133,7 @@ Sowohl in der Auftragsübersicht als auch in der Detailansicht eines Auftrags ha
 [#configure-columns]
 == Spalten in der Übersicht konfigurieren
 
-Die Tabellenspalten in der Auftragsübersicht sind für beide Ebenen konfigurierbar. Beim ersten Öffnen des Menüs *Aufträge » Aufträge (Testphase)* wird dir die Standardansicht der Tabelle angezeigt. Mit Klick auf *Spalten konfigurieren* (material:settings[]) rechts öffnen sich die Optionen *Tabelle Aufträge* und *Tabelle Auftragspositionen*. Im Fenster *Spalten konfigurieren* kannst du jeweils wählen, welche Spalten du sehen möchtest und in welcher Reihenfolge diese angezeigt werden sollen.
+Die Tabellenspalten in der Auftragsübersicht sind für beide Ebenen konfigurierbar. Beim ersten Öffnen des Menüs *Aufträge » Aufträge (Testphase)* wird dir die Standardansicht der Tabelle angezeigt. Mit Klick auf *Spalten konfigurieren* (material:settings[]) rechts öffnen sich die Optionen *Tabelle Auftragsübersicht* und *Tabelle Auftragspositionen*. Im Fenster *Spalten konfigurieren* kannst du jeweils wählen, welche Spalten du sehen möchtest und in welcher Reihenfolge diese angezeigt werden sollen.
 
 [.collapseBox]
 .*Spalten konfigurieren*
@@ -155,7 +155,7 @@ Spalten konfigurieren:
 --
 
 [#table-columns-orders]
-=== Tabellenspalten für Aufträge konfigurieren
+=== Tabellenspalten für die Auftragsübersicht konfigurieren
 
 Die folgenden Spalten stehen für die *Auftragsübersicht* zur Verfügung.
 
