--- a/docs/en-gb/modules/orders/pages/order-search.adoc
+++ b/docs/en-gb/modules/orders/pages/order-search.adoc
@@ -14,15 +14,21 @@ Use one of the following methods to search for orders.
 Searching for orders:
 
 . Go to *Orders » Orders (Test phase)*.
-.. *_Option 1_*: Click on icon:search[role="darkGrey"] to see a list of all orders.
-.. *_Option 2_*: Enter a number into the search field and click on one of the automatic suggestions.
+.. *_Option 1:_* Click on icon:search[role="darkGrey"] to see a list of all orders.
+.. *_Option 2:_* Enter a number into the search field and click on one of the automatic suggestions.
 Then click on icon:search[role="darkGrey"] to start the search.
 .. *_Option 3:_* Click on icon:tune[set=material] to narrow down the search results with filters.
 
 [#select-order-filters]
 == Selecting filters
 
-In the editing mode (icon:design_inline_edit[set=plenty]) of the order UI, the filters are displayed in the columns *Available filters* and *Displayed filters* under *Settings » Filter settings*. Decide for yourself which filters should be visible in the order overview.
+In the editing mode (icon:design_inline_edit[set=plenty]) of the order overview, the filters are displayed in the columns *Available filters* and *Displayed filters* under *Settings » Filter settings*. Decide for yourself which filters should be visible in the order search.
+
+[TIP]
+.Adjusting the layout of filters
+======
+With the setting *Filter arrangement* in the editing mode, you decide about the number of filter columns to be shown in the search.
+======
 
 [[table-available-filters]]
 .Available and displayed filters in the order search
@@ -35,17 +41,17 @@ In the editing mode (icon:design_inline_edit[set=plenty]) of the order UI, the f
 *_Note:_* The filters are subdivided into the groups *Basic*, *Date*, *Status*, *Item*, *Contact* and *Marketplace*. Expand the respective group to view and select individual filters.
 
 |*Displayed filters*
-|The selected filters are displayed in the right column. Those filters are visible in the order overview.
+|The selected filters are displayed in the right column. These filters are visible in the order search.
 |===
 
 [.instruction]
-Selecting displayed filters:
+Selecting filters to be displayed:
 
 . Go to *Orders » Orders (Test phase)*.
 . Click on *Edit view* )icon:design_inline_edit[set=plenty]) at the top right. +
 → The editing mode opens.
 . At the top right of the main window, click on *Edit* (material:mode[]). +
-→ In the *Settings* area to the right, the filter settings including the columns *Available filters* and *Displayed* filters are visible.
+→ In the order overview’s *Settings* area to the right, the filter settings including the columns *Available filters* and *Displayed filters* are visible.
 . Click on *Add filter* (material:add[]) to add filters from the *Available filters* column to the *Displayed filters* column. Alternatively, drag-and-drop the filters that should be displayed from the *Available filters* area to the *Displayed filters* area. +
 *_Tip:_* Drag the filters in the *Displayed filters* column to the desired position to adjust the order in which the filters are displayed.
 . *Save* (material:save[]) the settings. +
@@ -101,53 +107,62 @@ a|Select a tag from the drop-down list to search for orders with this tag. it is
 a|Select a document type from the drop-down list to search for orders including this document type. +
 The following document types are available: +
 
-* material:description[]*Invoice*
-* material:description[]*External invoice*
-* material:description[]*Reversal document*
-* material:description[]*Credit note*
-* material:description[]*External credit note*
-* material:description[]*Reversal refund*
-* material:description[]*Adjustment form*
-* material:description[]*Entry certificate*
-* material:description[]*Dunning letter*
-* material:description[]*Reversal dunning letter*
-*  material:description[]*Pro forma invoice*
-* material:description[]*Multi invoice*
-* material:description[]*Multi credit note*
-* material:description[]*Repair slip*
-* material:description[]*Pick-up delivery*
-* material:description[]*Offer*
-* material:description[]*Delivery note*
-* material:description[]*Order confirmation*
-* material:description[]*Return slip*
+* material:description[] *Order confirmation*
+* material:description[] *External credit note*
+* material:description[] *External invoice*
+* material:description[] *Entry certificate*
+* material:description[] *Offer*
+* material:description[] *Credit note*
+* material:description[] *Adjustment form*
+* material:description[] *Delivery note*
+* material:description[] *Dunning letter*
+* material:description[] *Pro forma invoice*
+* material:description[] *Invoice*
+* material:description[] *Repair slip*
+* material:description[] *Return slip*
+* material:description[] *Multi credit note*
+* material:description[] *Multi-invoice*
+* material:description[] *Reversal credit note*
+* material:description[] *Reversal dunning letter*
+* material:description[] *Reversal invoice*
+* material:description[] *POS coupon receipt*
+* material:description[] *Cancellation*
+* material:description[] *Till count*
+* material:description[] *Z report*
+* material:description[] *Pick-up delivery*
+* material:description[] *Settlement report*
+* material:description[] *EBICS hash*
+* material:description[] *Cash journal*
+* material:description[] *SEPA direct debit*
+* material:description[] *Incoming items register*
 
 | *Payment status*
 a|Select a payment status from the drop-down list to search for orders with this payment status. The following payment statuses are available: +
 
-* Overpaid (orange) +
-* Paid (green) +
-* Partly paid (orange) +
-* Prepaid (orange) +
-* Unpaid (red)
+* Overpaid +
+* Paid +
+* Partially paid +
+* Prepaid +
+* Outstanding
 
 | *Exclude main orders*
 a|Use the drop-down list to select if main orders should be included in the search results or not. For example, this affects the search for delivery orders. The following options are available: +
 
-* *empty option* = ALL +
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = Main orders are not displayed in the search results. +
 * *No* = Main orders are displayed in the search results.
 
 | *Express shipping*
-a|Decide if you want to search for orders who are delivered via express shipping. The following options are available: +
+a|Decide via the drop-down list if you want to search for orders who are delivered via express shipping. The following options are available: +
 
-* *empty option* = ALL +
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = The order is delivered via express shipping. +
-* *No* = The order is not delivered via express shipping.
+* *No* = The order was not delivered via express shipping.
 
 | *Valid invoice*
-a|Decide if you want to search for orders with a valid invoice. The following options are available: +
+a|Decide via the drop-down list if you want to search for orders with a valid invoice. The following options are available: +
 
-* *empty option* = ALL +
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = Only orders with valid invoices are included in the search results. +
 * *No* = Only orders without valid invoices are included in the search results.
 
@@ -161,9 +176,9 @@ a|Decide if you want to search for orders with a valid invoice. The following op
 |Select one or more shipping methods from the drop-down list to search for orders with this shipping method.
 
 | *Cancelled*
-a|Decide if you want to search for cancelled or uncancelled orders. The following options are available: +
+a|Decide via the drop-down list if you want to search for cancelled or uncancelled orders. The following options are available: +
 
-* *empty option* = ALL +
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = Only cancelled orders will be included in the search results. +
 * *No* = Only orders that have not been cancelled are included in the search results.
 
@@ -178,14 +193,14 @@ a|Decide if you want to search for cancelled or uncancelled orders. The followin
 
 2+^| *Date*
 
-| *Order date*
+| *Creation date*
 |Enter a date or select a date from the calendar (material:today[]) to search for orders that were created on this date.
 
-| *Order received date*
+| *Order received*
 |Enter a date or select a date from the calendar (material:today[]) to search for orders that were received on this date.
 
 | *Outgoing items date*
-|Enter a date or select a date from the calendar (material:today[]) to search for orders that were shipped on this date.
+|Enter a date or select a date from the calendar (material:today[]) to search for orders where the outgoing items were booked on this date.
 
 | *Incoming payment*
 |Enter a date or select a date from the calendar (material:today[]) to search for orders that were paid on this date.
@@ -195,7 +210,7 @@ a|Decide if you want to search for cancelled or uncancelled orders. The followin
 
 2+^| *Status*
 
-| *Status*
+| *Order status*
 |Select a status from the drop-down list to search for orders with this status.
 
 | *Dunning level*
@@ -203,7 +218,7 @@ a|Decide if you want to search for cancelled or uncancelled orders. The followin
 
 2+^| *Item*
 
-| *Variation number*
+| *Variation no.*
 |Enter a variation number to search for orders including variations with this number.
 
 | *Item data*
@@ -216,12 +231,12 @@ a|Decide if you want to search for cancelled or uncancelled orders. The followin
 |Enter one or more item IDs to search for orders including this item ID.
 
 | *Serial number*
-|Enter a serial number to search for orders including variations with this serial number.
+|Enter a serial number to search for orders including items and variations with this serial number.
 
 | *Manufacturer*
-|Select one or more manufacturers to search for orders including variations with this manufacturer.
+|Select one or multiple manufacturers to search for orders including items and variations from this manufacturer.
 
-2+^| *Contact person*
+2+^| *Contact*
 
 | *Contact data*
 |Enter contact data to search for orders including this contact data. For example, this can be the contact name.
@@ -233,9 +248,9 @@ a|Decide if you want to search for cancelled or uncancelled orders. The followin
 |Select a country of delivery from the drop-down list to search for orders with this country of delivery.
 
 | *Packstation*
-a|Decide if you want to search for orders that are shipped to a Packstation. The following options are available: +
+a|Select via the drop-down list if you want to search for orders that are delivered to a Packstation. The following options are available: +
 
-* *empty option* = ALL +
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = Orders that include a Packstation in the shipping address are included in the search results. +
 * *No* = Orders without a Packstation in the shipping address are included in the search results.
 
@@ -245,13 +260,13 @@ a|Decide if you want to search for orders that are shipped to a Packstation. The
 2+^| *Marketplace*
 
 | *eBay Plus*
-a|Decide if you want to search for eBay Plus orders. The following options are available: +
+a|Decide via the drop-down list if you want to search for eBay Plus orders. The following options are available: +
 
-* *empty option* = ALL
+* *empty option* = ALL (All orders are included in the search results). +
 * *Yes* = Only eBay Plus orders are included in the search results.
 * *No* = Only orders without eBay Plus are included in the search results.
 
-| *Referrer*
+| *Order referrer*
 |Select one or more referrers from the drop-down list to search for orders with this referrer. The option *0* stands for manual entry.
 
 | *Amazon*
@@ -310,7 +325,7 @@ _Example:_ I am searching for orders for which a _Package number exists_.
 | *≈*
 |Contains +
 Only orders that contain the selected value are displayed. +
-_Example:_ I am searching for orders that include a variation with the number _52_.
+_Example:_ I am searching for orders that contain variations with the number _52_.
 
 |===
 --
