--- a/docs/en-gb/modules/orders/pages/order-type-credit-note.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-credit-note.adoc
@@ -1,9 +1,9 @@
 = Order type: Credit note
 
-:keywords: credit note, credit note order, credit note receipt, cancel credit note receipt, refund, book back items
+:keywords: credit note, credit note order, credit note document, credit note receipt, cancel credit note receipt, refund, book back items
 :author: team-order-core
 
-Credit note orders are used for reimbursing your customers, for example after a xref:orders:order-type-return.adoc#[return order].  A credit note in plentymarkets does not represent a reverse invoice but a refund. Credit note orders are created from an existing main order in the *Orders » Orders (Test phase)* menu. Thus, a credit note is always linked to a main order. The credit note receipts created in a credit note order are included in your financial accounting such as the xref:orders:accounting.adoc#650[DATEV export].
+With a credit note, your customers are refunded with an amount. For example, this can be the case after a xref:orders:order-type-return.adoc#[return]. A credit note in plentymarkets does not represent a reverse invoice but a refund. Credit note orders are created from an existing main order in the *Orders » Orders (Test phase)* menu. Thus, a credit note is always linked to a main order. The credit note receipts created in a credit note order are also included in your accounting exports, such as the xref:orders:accounting.adoc#650[DATEV export].
 
 [#saving-standard-status]
 == Saving a default status for credit notes
@@ -20,7 +20,7 @@ A credit note is always linked to an already existing order in your plentymarket
 ======
 If a customer has already paid for an order, for example via cash in advance and then decides against the purchase before you have shipped the items and booked outgoing items, we recommend to cancel the order and to create a credit note including all order items.
 
-If payment, outgoing items and delivery have already taken place for one or all order items and it results in a xref:orders:order-type-return.adoc#[return] or a xref:orders:order-type-repair.adoc#[repair order], you should create the credit note directly in the corresponding return or repair order.
+In case payment, outgoing items and delivery have already taken place for one or all order items and it results in a xref:orders:order-type-return.adoc#[return] or a xref:orders:order-type-repair.adoc#[repair order], you should create the credit note directly in the corresponding return or repair order.
 ======
 
 :ordertype: credit notes
@@ -60,28 +60,28 @@ include::partial$create-order-type.adoc[]
 |Adds all open order items to the shopping cart.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
-| *Variation number*
-|Displays the variation number.
+| *Variation no.*
+|Shows the variation number.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Remaining quantity*
-|Displays the remaining quantity of the item.
+|Shows the remaining quantity of the item.
 
 | *Open quantity*
-|Displays the open quantity of the item.
+|Shows the open quantity of the item.
 
 | *Item name*
-|Displays the name of the item.
+|Shows the name of the item.
 
 | *Add items to shopping cart* (material:add_shopping_cart[])
-|Only adds specific items to the return. This button is only displayed if at least 1 item is available. +
+|Only adds specific items to the credit note. This button is only displayed if at least 1 item is available. +
 *_Tip:_* If needed, adjust the item quantity in the *Quantity* field.
 
 2+^| *Shopping cart*
@@ -90,16 +90,16 @@ include::partial$create-order-type.adoc[]
 |Removes all items from the shopping cart. If you only want to remove specific items, click on *Remove item from shopping cart* (material:delete[]) on the right of the respective item.
 
 | *Item ID*
-|Displays the item ID.
+|Shows the item ID.
 
 | *Variation ID*
-|Displays the variation ID.
+|Shows the variation ID.
 
 | *Quantity*
-|Displays the item quantity. If needed, adjust the quantity.
+|Shows the item quantity. If needed, adjust the quantity.
 
 | *Item name*
-|Displays the item name. If needed, adjust the name.
+|Shows the item name. If needed, adjust the name.
 
 |===
 
@@ -115,21 +115,23 @@ Creating the document *Credit note*:
 
 . Go to *Orders » Orders (Test phase)*.
 . Carry out the search (material:search[]) to display orders.
-. Open the credit note order for which the document *Credit note* is to be created.
+. On the right in the row of the credit note, click on the context menu (material:more_vert[]).
+. Select *Create document* > *Credit note*. +
+icon:map-signs[] *_Or:_* Open the credit note order for which the document *Credit note* is to be created.
 . Go to the *Documents* area.
-. On the right, click on *Create document* (material:note_add[]).
+. On the right, click on *Create document* (material:add[]).
 . Select the option *Credit note*. +
 → The window to create the document opens.
 . Carry out the settings, if required.
-. Click on *Execute*. +
+. Click on *Book*. +
 → The document *Credit note* is generated.
 
 [#correct-and-cancel-credit-note-document]
 == Correcting and reversing the credit note document
 
-In order to correct a credit note and the respective document, you need to generate a *reversal credit note* first. Afterwards, the credit note order is unlocked again. Once a credit note document is created, the credit note order itself is locked for editing, so that tax relevant data cannot be changed. Afterwards, the credit note order can be edited again. You can now correct the data and create a new document for the credit note.
+In order to correct a credit note and the respective document, you need to generate a *Reversal credit note* first. Afterwards, the credit note order is unlocked again. Once a credit note document is created, the credit note order itself is locked for editing, so that tax relevant data cannot be changed. Afterwards, the credit note order can be edited again. You can now correct the data and create a new document for the credit note.
 
-Before the initial generation of the document, go to the *Setup » Client » [Select client] » Location » [Select location] » Documents » Reversal credit note* menu and setup the xref:orders:order-documents.adoc#300[template] for the *reversal credit note* document.
+Before the initial generation of the document, go to the *Setup » Client » [Select client] » Location » [Select location] » Documents » Reversal document credit note* menu and setup the xref:orders:order-documents.adoc#300[template] for the *Reversal credit note* document.
 
 [IMPORTANT]
 .Reversing a credit note document
@@ -139,21 +141,21 @@ The reversing of a credit note is used to correct tax relevant data in a transpa
 
 To correct a credit note order by creating a *Reversal credit note*, proceed as follows.
 
-// adjust note_add icon to add once the changes are merged
-
 [.instruction]
 Correcting a credit note order:
 
 . Go to *Orders » Orders (Test phase)*.
 . Carry out the search (material:search[]) to display orders.
-. Open the order that contains the credit note you want to reverse.
-. In the *Documents* area, click on *Create document* (material:note_add[]).
+. On the right in the row of the credit note, click on the context menu (material:more_vert[]).
+. Select *Create documents* > *Reversal credit note*. +
+icon:map-signs[] *_Or:_* Open the credit note order for which the document *Reversal credit note* is to be created.
+. In the *Documents* area, click on *Create document* (material:add[]).
 . Select the option *Reversal credit note*. +
 *_Note:_* This option is only available if you have already created a credit note document.
 . Carry out the settings, if required.
 . Afterwards, click on *Create*. +
 → The reversal document is created.
-. Click on *Create document* (material:note_add[]) once again.
+. Click on *Create document* (material:add[]) once again.
 . Select the option *Credit note* in order to generate a new credit note document.
 . Carry out the settings, if required.
 . Afterwards, click on *Create*. +
@@ -188,10 +190,10 @@ Booking a refund:
 |===
 
 | *Order ID*
-|Displays the order ID.
+|Shows the order ID.
 
 | *Amount*
-|Displays the amount that will be refunded. If needed, adjust the amount.
+|Shows the amount that will be refunded. If needed, adjust the amount.
 
 | *Credit/Debit*
 |Select from the drop-down list whether it is credit or debit.
@@ -200,9 +202,9 @@ Booking a refund:
 |Select a currency from the drop-down list.
 
 | *Exchange rate*
-|Displays the exchange rate.
+|Shows the exchange rate.
 
-| *Designated use*
+| *Reason for payment*
 |Enter a designated use.
 
 | *Incoming payment*
