--- a/docs/en-gb/modules/orders/pages/order-type-offer.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-offer.adoc
@@ -17,35 +17,37 @@ Further information and instructions on setting up the document template are ava
 Offers are created individually for a customer. This is why the corresponding documents are directly linked with this order of the type *Offer*. This also means that the document offer can only be generated for the order type *Offer*. Therefore, if you want to generate a PDF file for an *offer*, for example, you have to create the order type offer first. You generate the corresponding document as follows.
 
 [.instruction]
-Generating an offer (document) manually:
+Manually generating an *Offer* (document):
 
 . Go to *Orders » Orders (Test phase)*. +
-. Use the filters to search (material:search[]) for the order type offer for which you want to create the document.
-. Open the required offer.
-. Open the *Documents* area.
-. On the right, click on *Create document* (material:note_add[]).
-. Select the option *Offer*.
+. Use the filters to search (material:search[]) for the order type offer for which you want to create the *Offer* document.
+. On the right in the row of the offer, click on the context menu (material:more_vert[]).
+. Select *Create document* > *Offer*. +
+icon:map-signs[] *_Or:_* Open the offer for which the *Offer* document is to be generated.
+. Go to the *Documents* area.
+. Click on *Create document* (material:add[]).
+. Select the option *Offer*. +
 . Carry out the settings. Pay attention to the explanations given in <<table-generate-offer-document>>.
-. Click on *Execute* to create the offer document.
+. Click on *Execute* to create the *Offer* document.
 
 [[table-generate-offer-document]]
-.Settings for the offer document
+.Settings for the *Offer* document
 [cols="1,3"]
 |===
 |Setting |Explanation
 
 | *Date*
-|Enter a date to be displayed on the offer document or select a date from the calendar (material:today[]). The present date is set by default.
+|Enter a date to be displayed on the *Offer* document or select a date from the calendar (material:today[]). The present date is set by default.
 
 |*Comment*
-|The text entered here is displayed below the order items. Entering a text is optional.
+|The text entered here is displayed below the list of order items on the *Offer* document. Entering a text is optional.
 
 |===
 
 [#automate-shipping-offer-doc]
 == Automating sending offer documents
 
-You created individual offers for customers, generated the corresponding documents and want to send them to your customers now? You can automate the process of sending offer documents by setting up the appropriate event procedure. To send the document offer as an email attachment, we recommend the event procedure described in <<table-event-procedure-sending-offer-document>>. Proceed as described in the following to set up the event procedure.
+You created individual offers for customers, generated the corresponding documents and want to send them to your customers now? You can automate the process of sending offer documents by setting up the appropriate event procedure. To send the *Offer* document as an email attachment, we recommend that you set up the event procedure described in <<table-event-procedure-sending-offer-document>>. Proceed as described in the following to set up the event procedure.
 
 :table-event-procedure: <<table-event-procedure-sending-offer-document>>
 include::_includes:partial$event-procedure.adoc[]
@@ -57,7 +59,7 @@ include::_includes:partial$event-procedure.adoc[]
 |Setting |Option |Selection
 
 | *Event*
-| Documents > Offer generated
+| *Documents > Offer generated*
 |
 
 | *Filter*
@@ -66,11 +68,11 @@ include::_includes:partial$event-procedure.adoc[]
 
 | *Procedure*
 | *Customer > Send email*
-|Click on Add (icon:plus-square[role="green"]) to add the corresponding email template for sending the offer to the *Customer* (e.g.  “Send offer as PDF”).
+|Click on *Add* (icon:plus-square[role="green"]) to add the corresponding email template for sending the offer for the selection *Customer* (e.g. "Send offer as PDF”).
 |===
 
 [TIP]
 .You don’t see the corresponding email template?
 ======
-You don’t see the corresponding email template for the event procedure “Send offer as PDF”? That’s probably because you haven’t created it yet. You can do this in the *Setup » Client* » _Select client_ » Email » Templates menu. Click on *New email template* (icon:plus-square[role="green"]) and create the template according to your requirements. The name you enter here for the email template is then displayed in the event procedures. For further information about setting up email templates, refer to the xref:crm:sending-emails.adoc#1200[Sending emails] page of the manual.
+You don’t see the corresponding email template for the event procedure *Send offer as PDF*? That’s probably because you haven’t created it yet. You can do this in the *Setup » Client » _Select client_ » Email » Templates* menu. Click on *New email template* (icon:plus-square[role="green"]) and create the template according to your requirements. The name you enter here for the email template is then displayed in the event procedures. For further information about setting up email templates, refer to the xref:crm:sending-emails.adoc#1200[Sending emails] page of the manual.
 ======
